# corva-convert-units

./: .eslintrc.js  .gitignore  .npmignore  .release-please-manifest.json  CHANGELOG.md  FEATURE_PARITY.md  Makefile  README.md  REFACTOR_PLAN.md  index.d.ts  package-lock.json  package.json  release-please-config.json  tsconfig.json
.github/: renovate.json
.github/scripts/: publish.mjs
.github/workflows/: code-analysis.yml  publish.yml  release-please.yml  semantic-pr.yml  (+1 more)
definitions/: SYNC_REPORT.md  acousticSlowness.json  angle.json  anglePerLength.json  angularVelocity.json  area.json  concentration.json  current.json  density.json  digital.json  each.json  energy.json  force.json  gammaRadiation.json  gasConcentration.json  gasFlowRate.json  gasVolume.json  gravity.json  gravityRMS.json  inversePressure.json  length.json  lengthPerAngle.json  mass.json  massFlowRate.json  mpl.json  partsPer.json  permiability.json  porosity.json  power.json  pressure.json  pressureGradient.json  proportion.json  resistivity.json  revolutionPerVolume.json  speed.json  spontaneousPotential.json  strokesRate.json  surveyLength.json  temperature.json  time.json  (+8 more)
js/: .prettierrc  CHANGELOG.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
lib/: constants.js  helpers.js  index.js  percentError.js
py/: CHANGELOG.md  pyproject.toml
py/src/corva_unit_converter/: __init__.py  constants.py  converter.py  definitions.py  loader.py
py/tests/: test_converter.py  test_definitions.py
scripts/: sync-definitions.sh  validate-definitions.mjs
(+83 files in other folders)
